--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,11 @@ pandas == 1.2.4
 keybert
 flair
 click<8
+
+pdfminer.six
+sentence-transformers
+scikit-learn
+python-dotenv
+google-generativeai
+gdown
+ijson
